syntax = "proto3";

package ai.metathings.service.deviced;
option go_package = "github.com/nayotta/metathings/proto/deviced";

import "google/protobuf/empty.proto";

import "create_device.proto";
import "delete_device.proto";
import "patch_device.proto";
import "get_device.proto";
import "list_devices.proto";
import "get_device_by_module.proto";

import "create_config.proto";
import "delete_config.proto";
import "patch_config.proto";
import "get_config.proto";
import "list_configs.proto";
import "add_configs_to_device.proto";
import "remove_configs_from_device.proto";
import "list_configs_by_device.proto";

import "upload_descriptor.proto";
import "get_descriptor.proto";

import "unary_call.proto";
import "stream_call.proto";

import "pull_frame_from_flow.proto";
import "push_frame_to_flow.proto";
import "push_frame_to_flow_once.proto";
import "query_frames_from_flow.proto";

import "create_flow_set.proto";
import "delete_flow_set.proto";
import "patch_flow_set.proto";
import "get_flow_set.proto";
import "list_flow_sets.proto";
import "add_flows_to_flow_set.proto";
import "remove_flows_from_flow_set.proto";
import "pull_frame_from_flow_set.proto";

import "put_object.proto";
import "put_object_streaming.proto";
import "remove_object.proto";
import "rename_object.proto";
import "get_object.proto";
import "get_object_content.proto";
import "get_object_streaming_content.proto";
import "list_objects.proto";

import "create_firmware_hub.proto";
import "delete_firmware_hub.proto";
import "patch_firmware_hub.proto";
import "get_firmware_hub.proto";
import "list_firmware_hubs.proto";
import "add_devices_to_firmware_hub.proto";
import "remove_devices_from_firmware_hub.proto";
import "add_firmware_descriptor_to_firmware_hub.proto";
import "remove_firmware_descriptor_from_firmware_hub.proto";
import "get_device_firmware_descriptor.proto";
import "set_device_firmware_descriptor.proto";
import "sync_device_firmware_descriptor.proto";

import "show_device.proto";
import "show_device_firmware_descriptor.proto";
import "connect.proto";
import "heartbeat.proto";

service DevicedService {
	rpc CreateDevice(CreateDeviceRequest) returns (CreateDeviceResponse) {}
	rpc DeleteDevice(DeleteDeviceRequest) returns (google.protobuf.Empty) {}
	rpc PatchDevice(PatchDeviceRequest) returns (PatchDeviceResponse) {}
	rpc GetDevice(GetDeviceRequest) returns (GetDeviceResponse) {}
	rpc ListDevices(ListDevicesRequest) returns (ListDevicesResponse) {}
	rpc GetDeviceByModule(GetDeviceByModuleRequest) returns (GetDeviceByModuleResponse) {}

	// Config
	rpc CreateConfig(CreateConfigRequest) returns (CreateConfigResponse) {}
	rpc DeleteConfig(DeleteConfigRequest) returns (google.protobuf.Empty) {}
	rpc PatchConfig(PatchConfigRequest) returns (PatchConfigResponse) {}
	rpc GetConfig(GetConfigRequest) returns (GetConfigResponse) {}
	rpc ListConfigs(ListConfigsRequest) returns (ListConfigsResponse) {}
	rpc AddConfigsToDevice(AddConfigsToDeviceRequest) returns (google.protobuf.Empty) {}
	rpc RemoveConfigsFromDevice(RemoveConfigsFromDeviceRequest) returns (google.protobuf.Empty) {}
	rpc ListConfigsByDevice(ListConfigsByDeviceRequest) returns (ListConfigsByDeviceResponse) {}

	// Descriptor
	rpc UploadDescriptor(UploadDescriptorRequest) returns (UploadDescriptorResponse) {}
	rpc GetDescriptor(GetDescriptorRequest) returns (GetDescriptorResponse) {}

	// Calling
	rpc UnaryCall(UnaryCallRequest) returns (UnaryCallResponse) {}
	rpc StreamCall(stream StreamCallRequest) returns (stream StreamCallResponse) {}

	// Flow
	rpc PullFrameFromFlow(PullFrameFromFlowRequest) returns (stream PullFrameFromFlowResponse) {}
	rpc PushFrameToFlow(stream PushFrameToFlowRequest) returns (stream PushFrameToFlowResponse) {}
  rpc PushFrameToFlowOnce(PushFrameToFlowOnceRequest) returns (google.protobuf.Empty) {}
	rpc QueryFramesFromFlow(QueryFramesFromFlowRequest) returns (QueryFramesFromFlowResponse) {}

	// Flow Set
	rpc CreateFlowSet(CreateFlowSetRequest) returns (CreateFlowSetResponse) {}
	rpc DeleteFlowSet(DeleteFlowSetRequest) returns (google.protobuf.Empty) {}
	rpc PatchFlowSet(PatchFlowSetRequest) returns (PatchFlowSetResponse) {}
	rpc GetFlowSet(GetFlowSetRequest) returns (GetFlowSetResponse) {}
	rpc ListFlowSets(ListFlowSetsRequest) returns (ListFlowSetsResponse) {}
	rpc AddFlowsToFlowSet(AddFlowsToFlowSetRequest) returns (google.protobuf.Empty) {}
	rpc RemoveFlowsFromFlowSet(RemoveFlowsFromFlowSetRequest) returns (google.protobuf.Empty) {}
	rpc PullFrameFromFlowSet(PullFrameFromFlowSetRequest) returns (stream PullFrameFromFlowSetResponse) {}

	// Simple Storage
	rpc PutObject(PutObjectRequest) returns (google.protobuf.Empty) {}
	rpc PutObjectStreaming(stream PutObjectStreamingRequest) returns (stream PutObjectStreamingResponse) {}
	rpc RemoveObject(RemoveObjectRequest) returns (google.protobuf.Empty) {}
	rpc RenameObject(RenameObjectRequest) returns (google.protobuf.Empty) {}
	rpc GetObject(GetObjectRequest) returns (GetObjectResponse) {}
	rpc GetObjectContent(GetObjectContentRequest) returns (GetObjectContentResponse) {}
	rpc GetObjectStreamingContent(GetObjectStreamingContentRequest) returns (stream GetObjectStreamingContentResponse) {}
	rpc ListObjects(ListObjectsRequest) returns (ListObjectsResponse) {}

	// Firmware Hub
	rpc CreateFirmwareHub(CreateFirmwareHubRequest) returns (CreateFirmwareHubResponse) {}
	rpc DeleteFirmwareHub(DeleteFirmwareHubRequest) returns (google.protobuf.Empty) {}
	rpc PatchFirmwareHub(PatchFirmwareHubRequest) returns (PatchFirmwareHubResponse) {}
	rpc GetFirmwareHub(GetFirmwareHubRequest) returns (GetFirmwareHubResponse) {}
	rpc ListFirmwareHubs(ListFirmwareHubsRequest) returns (ListFirmwareHubsResponse) {}
	rpc AddDevicesToFirmwareHub(AddDevicesToFirmwareHubRequest) returns (google.protobuf.Empty) {}
	rpc RemoveDevicesFromFirmwareHub(RemoveDevicesFromFirmwareHubRequest) returns (google.protobuf.Empty) {}
	rpc AddFirmwareDescriptorToFirmwareHub(AddFirmwareDescriptorToFirmwareHubRequest) returns (google.protobuf.Empty) {}
	rpc RemoveFirmwareDescriptorFromFirmwareHub(RemoveFirmwareDescriptorFromFirmwareHubRequest) returns (google.protobuf.Empty) {}
	rpc GetDeviceFirmwareDescriptor(GetDeviceFirmwareDescriptorRequest) returns (GetDeviceFirmwareDescriptorResponse) {}
	rpc SetDeviceFirmwareDescriptor(SetDeviceFirmwareDescriptorRequest) returns (google.protobuf.Empty) {}
	rpc SyncDeviceFirmwareDescriptor(SyncDeviceFirmwareDescriptorRequest) returns (google.protobuf.Empty) {}

	// internal device only
	rpc ShowDevice(google.protobuf.Empty) returns (ShowDeviceResponse) {}
  rpc ShowDeviceFirmwareDescriptor(google.protobuf.Empty) returns (ShowDeviceFirmwareDescriptorResponse) {}
	rpc Connect(stream ConnectResponse) returns (stream ConnectRequest) {}
	rpc Heartbeat(HeartbeatRequest) returns (google.protobuf.Empty) {}
}
